--- a/templates/base.html
+++ b/templates/base.html
@@ -40,14 +40,18 @@
         <ul class="sideMenuNav1">
           <div class="nav1Box">
             <li class="nav1BoxMenu">
-              <img class="nav1BoxMenuImg" src="{% static 'images/calendar.png' %}" alt="일정 아이콘">
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/calendar.png' %}" alt="일정 아이콘">
+              </div>
               <a href="{% url 'home' %}" class="nonDepth2Menu">일정</a>
             </li>
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
-              <img class="nav1BoxMenuImg" src="{% static 'images/notice.png' %}" alt="공지사항 아이콘">
-              <div>공지사항</div>
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/notice.png' %}" alt="공지사항 아이콘">
+              </div>
+              <div class="nav1BoxMenuHaveDepth2Text">공지사항</div>
               <svg class="sideMenuArrow" xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
                 <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
               </svg>        
@@ -65,8 +69,10 @@
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
-              <img class="nav1BoxMenuImg" src="{% static 'images/dispatchSystem.png' %}" alt="배차시스템 아이콘">
-              <div>배차관리</div>
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/dispatchSystem.png' %}" alt="배차시스템 아이콘">
+              </div>
+              <div class="nav1BoxMenuHaveDepth2Text">배차관리</div>
               <svg class="sideMenuArrow" xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
                 <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
               </svg>            
@@ -105,23 +111,25 @@
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
-              <svg class="nav1BoxMenuImg"
-                xmlns="http://www.w3.org/2000/svg"
-                width="15"
-                height="15"
-                viewBox="0 0 24 24"
-                fill="none"
-                stroke="currentColor"
-                stroke-width="2"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
-                <line x1="16" y1="2" x2="16" y2="6"></line>
-                <line x1="8" y1="2" x2="8" y2="6"></line>
-                <line x1="3" y1="10" x2="21" y2="10"></line>
-              </svg>
-              <div>업무관리</div>
+              <div class="nav1BoxMenuImgDiv">
+                <svg class="nav1BoxMenuImg"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="17"
+                  height="17"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                >
+                  <rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect>
+                  <line x1="16" y1="2" x2="16" y2="6"></line>
+                  <line x1="8" y1="2" x2="8" y2="6"></line>
+                  <line x1="3" y1="10" x2="21" y2="10"></line>
+                </svg>
+              </div>
+              <div class="nav1BoxMenuHaveDepth2Text">업무관리</div>
               <svg class="sideMenuArrow" xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
                 <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
               </svg>        
@@ -142,8 +150,10 @@
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
-              <img class="nav1BoxMenuImg" src="{% static 'images/HRManagement.png' %}" alt="인사관리 아이콘">
-              <div>인사관리</div>
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/HRManagement.png' %}" alt="인사관리 아이콘">
+              </div>
+              <div class="nav1BoxMenuHaveDepth2Text">인사관리</div>
               <svg class="sideMenuArrow" xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
                 <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
               </svg>        
@@ -152,6 +162,36 @@
               <ul class="sideMenuNav2">
                 <a href="{% url 'HR:member' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">직원관리</li>
+                </a>
+                <a href="{% url 'HR:team' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">팀관리</li>
+                </a>
+              </ul>
+            </div>
+          </div>
+          <div class="nav1Box">
+            <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
+              <div class="nav1BoxMenuImgDiv">
+                <svg class="nav1BoxMenuImg" width="17" height="20" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
+                  <!-- 지폐 -->
+                  <rect x="5" y="20" width="54" height="30" rx="4" ry="4" fill="#fff" stroke="#333" stroke-width="2"/>
+                  <circle cx="32" cy="35" r="8" fill="#fff" stroke="#333" stroke-width="2"/>
+                  <text x="32" y="38" font-family="Arial" font-size="10" fill="#333" text-anchor="middle" alignment-baseline="middle">$</text>
+                  
+                  <!-- 동전 -->
+                  <circle cx="50" cy="50" r="6" fill="#fff" stroke="#333" stroke-width="2"/>
+                  <text x="50" y="53" font-family="Arial" font-size="8" fill="#333" text-anchor="middle" alignment-baseline="middle">$</text>
+                </svg>
+              </div>
+              <div class="nav1BoxMenuHaveDepth2Text">급여관리</div>
+              <svg class="sideMenuArrow" xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
+                <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
+              </svg>
+            </li>
+            <div class="sideMenuNav2Box">
+              <ul class="sideMenuNav2">
+                <a href="{% url 'salary:status' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">근무현황</li>
                 </a>
                 <a href="{% url 'HR:salary' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">급여관리(현재)</li>
@@ -165,16 +205,15 @@
                 <a href="{% url 'HR:salary_manager' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">급여관리(관리자)</li>
                 </a>
-                <a href="{% url 'HR:team' %}" class="sideMenuNav2Link">
-                  <li class="sideMenuNav2Menu">팀관리</li>
-                </a>
               </ul>
             </div>
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
-              <img class="nav1BoxMenuImg" src="{% static 'images/accountingSystem.png' %}" alt="경리시스템 아이콘">
-              <div>매출관리</div>
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/accountingSystem.png' %}" alt="경리시스템 아이콘">
+              </div>
+              <div class="nav1BoxMenuHaveDepth2Text">매출관리</div>
               <svg class="sideMenuArrow" xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
                 <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
               </svg>        
@@ -201,8 +240,10 @@
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
-              <img class="nav1BoxMenuImg" src="{% static 'images/vehicleManagement.png' %}" alt="차량관리 아이콘">
-              <div>차량관리</div>
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/vehicleManagement.png' %}" alt="차량관리 아이콘">
+              </div>
+              <div class="nav1BoxMenuHaveDepth2Text">차량관리</div>
               <svg class="sideMenuArrow" xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
                 <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
               </svg>        
@@ -229,8 +270,10 @@
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
-              <img class="nav1BoxMenuImg" src="{% static 'images/document.png' %}" alt="공지사항 아이콘">
-              <div>서류관리</div>
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/document.png' %}" alt="공지사항 아이콘">
+              </div>
+              <div class="nav1BoxMenuHaveDepth2Text">서류관리</div>
               <svg class="sideMenuArrow" xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
                 <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
               </svg>        
@@ -248,8 +291,10 @@
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
-              <img class="nav1BoxMenuImg" src="{% static 'images/document.png' %}" alt="공지사항 아이콘">
-              <div>민원관리</div>
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/document.png' %}" alt="공지사항 아이콘">
+              </div>
+              <div class="nav1BoxMenuHaveDepth2Text">민원관리</div>
               <svg class="sideMenuArrow" xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
                 <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
               </svg>        
@@ -267,13 +312,17 @@
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu">
-              <img class="nav1BoxMenuImg" src="{% static 'images/calendar.png' %}" alt="일정 아이콘">
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/calendar.png' %}" alt="일정 아이콘">
+              </div>
               <a href="{% url 'crudmember:setting_client' %}" class="nonDepth2Menu">거래처 관리</a>
             </li>
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu">
-              <img class="nav1BoxMenuImg" src="{% static 'images/calendar.png' %}" alt="일정 아이콘">
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/calendar.png' %}" alt="일정 아이콘">
+              </div>
               <a href="{% url 'crudmember:setting' %}" class="nonDepth2Menu">항목 관리</a>
             </li>
           </div>
@@ -282,19 +331,25 @@
         <ul class="sideMenuNav1">
           <div class="nav1Box">
             <li class="nav1BoxMenu">
-              <img class="nav1BoxMenuImg" src="{% static 'images/calendar.png' %}" alt="일정 아이콘">
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/calendar.png' %}" alt="일정 아이콘">
+              </div>
               <a href="{% url 'home' %}" class="nonDepth2Menu">일정</a>
             </li>
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu">
-              <img class="nav1BoxMenuImg" src="{% static 'images/notice.png' %}" alt="공지사항 아이콘">
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/notice.png' %}" alt="공지사항 아이콘">
+              </div>
               <a href="{% url 'notice:kinds' 'driver' %}" class="nonDepth2Menu">공지사항</a>
             </li>
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu nav1BoxMenuHaveDepth2">
-              <img class="nav1BoxMenuImg" src="{% static 'images/dispatchSystem.png' %}" alt="배차시스템 아이콘">
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/dispatchSystem.png' %}" alt="배차시스템 아이콘">
+              </div>
               <div>배차시스템</div>
               <svg class="sideMenuArrow" xmlns="http://www.w3.org/2000/svg" width="18.228" height="11.84" viewBox="0 0 18.228 11.84">
                 <path id="패스_256" data-name="패스 256" d="M0,0,6.753,8.223,14,0" transform="translate(2.111 2.117)" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="3"/>
@@ -319,13 +374,17 @@
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu">
-              <img class="nav1BoxMenuImg" src="{% static 'images/HRManagement.png' %}" alt="인사관리 아이콘">
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/HRManagement.png' %}" alt="인사관리 아이콘">
+              </div>
               <a href="{% url 'HR:salary' %}" class="nonDepth2Menu">급여관리</a>
             </li>
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu">
-              <img class="nav1BoxMenuImg" src="{% static 'images/calendar.png' %}" alt="일정 아이콘">
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/calendar.png' %}" alt="일정 아이콘">
+              </div>
               <a href="{% url 'crudmember:setting_client' %}" class="nonDepth2Menu">거래처 관리</a>
             </li>
           </div>
@@ -334,19 +393,25 @@
         <ul class="sideMenuNav1">
           <div class="nav1Box">
             <li class="nav1BoxMenu">
-              <img class="nav1BoxMenuImg" src="{% static 'images/calendar.png' %}" alt="일정 아이콘">
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/calendar.png' %}" alt="일정 아이콘">
+              </div>
               <a href="{% url 'home' %}" class="nonDepth2Menu">일정</a>
             </li>
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu">
-              <img class="nav1BoxMenuImg" src="{% static 'images/notice.png' %}" alt="공지사항 아이콘">
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/notice.png' %}" alt="공지사항 아이콘">
+              </div>
               <a href="{% url 'notice:kinds' 'driver' %}" class="nonDepth2Menu">공지사항</a>
             </li>
           </div>
           <div class="nav1Box">
             <li class="nav1BoxMenu">
-              <img class="nav1BoxMenuImg" src="{% static 'images/HRManagement.png' %}" alt="인사관리 아이콘">
+              <div class="nav1BoxMenuImgDiv">
+                <img class="nav1BoxMenuImg" src="{% static 'images/HRManagement.png' %}" alt="인사관리 아이콘">
+              </div>
               <a href="{% url 'HR:salary' %}" class="nonDepth2Menu">급여관리</a>
             </li>
           </div>
