feat: 직원관리 - 버스기사자격증번호 항목 추가

--- a/humanresource/templates/HR/member.html
+++ b/humanresource/templates/HR/member.html
@@ -603,6 +603,13 @@
                         <label for="hrUnuse">미사용</label>
                     </div>
                 </div>
+                <div class="popupArticleBox">
+                    <div class="popupArticleDouble">
+                        <label for="" class="popupArticleLabel">버스기사자격증번호</label>
+                        <input id="license" name="license" class="popupArticleinput length100">
+                    </div>
+                    
+                </div>
                 <div class="popupArticleCategori">진행상황 견습노선 및 내용</div>
                 <div class="popupArticleBox popupArticleBoxDoubleHeight">
                     <textarea id="apprenticeship_note" class="popupArticleBoxTextarea" name="apprenticeship_note"></textarea>
