--- a/salary/templates/salary/status.html
+++ b/salary/templates/salary/status.html
@@ -71,70 +71,14 @@
                 <div class="headLeft">
                     <div class="th">날짜</div>
                     <div class="tableDate">
-                        <div class="th dateColumn">1</div>
-                        <div class="th dateColumn">2</div>
-                        <div class="th dateColumn">3</div>
-                        <div class="th dateColumn">4</div>
-                        <div class="th dateColumn">5</div>
-                        <div class="th dateColumn">6</div>
-                        <div class="th dateColumn">7</div>
-                        <div class="th dateColumn">8</div>
-                        <div class="th dateColumn">9</div>
-                        <div class="th dateColumn">10</div>
-                        <div class="th dateColumn">11</div>
-                        <div class="th dateColumn">12</div>
-                        <div class="th dateColumn">13</div>
-                        <div class="th dateColumn">14</div>
-                        <div class="th dateColumn">15</div>
-                        <div class="th dateColumn">16</div>
-                        <div class="th dateColumn">17</div>
-                        <div class="th dateColumn">18</div>
-                        <div class="th dateColumn">19</div>
-                        <div class="th dateColumn">20</div>
-                        <div class="th dateColumn">21</div>
-                        <div class="th dateColumn">22</div>
-                        <div class="th dateColumn">23</div>
-                        <div class="th dateColumn">24</div>
-                        <div class="th dateColumn">25</div>
-                        <div class="th dateColumn">26</div>
-                        <div class="th dateColumn">27</div>
-                        <div class="th dateColumn">28</div>
-                        <div class="th dateColumn">29</div>
-                        <div class="th dateColumn">30</div>
-                        <div class="th dateColumn">31</div>
+                        {% for date in date_list %}
+                        <div class="th dateColumn">{{date}}</div>
+                        {% endfor %}
                     </div>
                     <div class="tableDate tableWeek">
-                        <div class="th dateColumn">월</div>
-                        <div class="th dateColumn">화</div>
-                        <div class="th dateColumn">수</div>
-                        <div class="th dateColumn">목</div>
-                        <div class="th dateColumn">금</div>
-                        <div class="th dateColumn">토</div>
-                        <div class="th dateColumn">일</div>
-                        <div class="th dateColumn">월</div>
-                        <div class="th dateColumn">화</div>
-                        <div class="th dateColumn">수</div>
-                        <div class="th dateColumn">목</div>
-                        <div class="th dateColumn">금</div>
-                        <div class="th dateColumn">토</div>
-                        <div class="th dateColumn">일</div>
-                        <div class="th dateColumn">월</div>
-                        <div class="th dateColumn">화</div>
-                        <div class="th dateColumn">수</div>
-                        <div class="th dateColumn">목</div>
-                        <div class="th dateColumn">금</div>
-                        <div class="th dateColumn">토</div>
-                        <div class="th dateColumn">일</div>
-                        <div class="th dateColumn">월</div>
-                        <div class="th dateColumn">화</div>
-                        <div class="th dateColumn">수</div>
-                        <div class="th dateColumn">목</div>
-                        <div class="th dateColumn">금</div>
-                        <div class="th dateColumn">토</div>
-                        <div class="th dateColumn">일</div>
-                        <div class="th dateColumn">월</div>
-                        <div class="th dateColumn">화</div>
-                        <div class="th dateColumn">수</div>
+                        {% for weekday in weekday_list %}
+                        <div class="th dateColumn">{{weekday}}</div>
+                        {% endfor %}
                     </div>
                     
                 </div>
@@ -153,9 +97,9 @@
                         <div class="td tdDateData">{{time}}</div>
                         {% endfor %}
                         <div class="td tdAttendance1">근무시간</div>
-                        <div class="td tdAttendance2">{{data.work_total_minute}}</div>
-                        <div class="td tdAttendance1"></div>
-                        <div class="td tdAttendance2"></div>
+                        <div class="td tdAttendance2">{{data.total_work_minute}}</div>
+                        <div class="td tdAttendance1">야근</div>
+                        <div class="td tdAttendance2">{{data.total_night_shift_minute}}</div>
                     </div>
                     <!-- 출근 -->
                     <div class="tr">
@@ -183,17 +127,17 @@
                         <div class="td tdDateData">{{time}}</div>
                         {% endfor %}
                         <div class="td tdAttendance1">주휴</div>
-                        <div class="td tdAttendance2"></div>
+                        <div class="td tdAttendance2">{{data.weekly_holiday_count}}</div>
                         <div class="td tdAttendance1">병가</div>
                         <div class="td tdAttendance2"></div>
                     </div>
                     <!-- 야근 -->
                     <div class="tr">
-                        {% for morning in data.morning_time_list %}
-                        <div class="td tdDateData"></div>
+                        {% for night in data.night_shift_time_list %}
+                        <div class="td tdDateData">{{night}}</div>
                         {% endfor %}
                         <div class="td tdAttendance1">비번</div>
-                        <div class="td tdAttendance2"></div>
+                        <div class="td tdAttendance2">{{data.off_duty_count}}</div>
                         <div class="td tdAttendance1">공휴</div>
                         <div class="td tdAttendance2"></div>
                     </div>
@@ -205,7 +149,7 @@
                         <div class="td tdAttendance1">무휴</div>
                         <div class="td tdAttendance2"></div>
                         <div class="td tdAttendance1">합계</div>
-                        <div class="td tdAttendance2"></div>
+                        <div class="td tdAttendance2">{{data.total_count}}</div>
                     </div>
                 </div>
                 {% endwith %}
