--- a/static/css/dispatch/order.css
+++ b/static/css/dispatch/order.css
@@ -733,7 +733,7 @@
 
 
 /* 경유지 */
-.waypointBox {
+.stationBox {
   display: flex;
   justify-content: space-between;
   width: 100%;
@@ -774,27 +774,39 @@
   height: 14.4rem;
 }
 
+.popupContainerDouble {
+  width: 84rem;
+}
+
 .popupArticleBoxTable td:nth-child(1) {
   width: 4%;
 }
 
 .popupArticleBoxTable td:nth-child(2) {
-  width: 40%;
+  width: 25%;
 }
 
 .popupArticleBoxTable td:nth-child(3) {
-  width: 16%;
+  width: 10%;
 }
 
 .popupArticleBoxTable td:nth-child(4) {
-  width: 16%;
+  width: 10%;
 }
 
 .popupArticleBoxTable td:nth-child(5) {
-  width: 26%;
+  width: 15%;
 }
 
-.waypointCloseBtn {
+.popupArticleBoxTable td:nth-child(6) {
+  width: 15%;
+}
+
+.popupArticleBoxTable td:nth-child(7) {
+  width: 30%;
+}
+
+.stationCloseBtn {
   background-color: #444;
 }
 
@@ -802,7 +814,7 @@
   position: relative;
 }
 
-.waypointDeleteBtn {
+.stationDeleteBtn {
   position: absolute;
   left: 0;
   background-color: #444;
@@ -813,7 +825,7 @@
   margin-left: auto;
 }
 
-.waypointTable input[type=text] {
+.stationTable input[type=text] {
   text-align: center;
   width: 100%;
   height: 3.6rem;
@@ -823,7 +835,7 @@
   background-color: transparent;
 }
 
-.waypointTable input[name=waypoint] {
+.stationTable input[name=station] {
   text-align: left;
   padding-left: 1rem;
 }
@@ -886,4 +898,183 @@
 .loadAccountBtn {
   background-color: #0069D9;
   margin-right: 1rem;
+}
+
+.openStationPopupBtn,
+.openTimeDistancePopupBtn {
+  cursor: pointer;
+}
+
+.blockInput {
+  background-color: #CDCDCE;
+  font-size: 1.6rem;
+  border: 0.1rem solid black;
+}
+
+.popupArticleDouble
+.stationSearchInput {
+  width: 19rem;
+}
+
+.stationSearchButton {
+  height: 2.4rem;
+}
+
+.stationSearchBox {
+  display: flex;
+  justify-content: space-between;
+  width: 27rem;
+  position: relative;
+}
+
+.stationSearchResultBox {
+  display: none;
+  position: absolute;
+  top: 2.5rem;
+  width: 100%;
+  height: auto;
+  max-height: 21rem;
+  overflow-y: auto;
+  background-color: white;
+  border: 0.1rem solid #CDCDCE;
+  box-sizing: border-box;
+}
+
+.stationSearchInfoBox {
+  display: flex;
+  height: 4.5rem;
+  padding: 0.5rem 1rem;
+  border-bottom: 0.1rem solid #CDCDCE;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.stationSearchInfoBox:last-child {
+  border-bottom: none;
+}
+
+.stationName {
+  font-size: 1.6rem;
+  font-weight: 500;
+}
+
+.stationAddress {
+  font-size: 1.4rem;
+}
+
+.stationSearchLoadingBox {
+  align-items: center;
+  display: flex;
+  height: 4.5rem;
+  padding: 0.5rem 1rem;
+  border-bottom: 0.1rem solid #CDCDCE;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.popupContainerMap {
+  width: 90rem;
+  height: auto;
+}
+
+/* 정류장 운행 예측 팝업 */
+.detailMapPopupHeader td {
+  background-color: #444;
+  color: white;
+  text-align: center;
+  position: sticky;
+  top: 0;
+}
+
+.popupArticleStation td:nth-child(1) {
+  width: 5%;
+}
+
+.detailMapPopupScrollBox {
+  width: 100%;
+  overflow: auto;
+  height: 19.4rem;
+
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+
+.detailMapPopupScrollBox::-webkit-scrollbar {
+  width: 0.6rem;
+  height: 1rem;
+}
+
+.detailMapPopupScrollBox::-webkit-scrollbar-thumb {
+  height: 17%;
+  background-color: #444444;
+  border-radius: 1rem;
+}
+
+.detailMapPopupScrollBox::-webkit-scrollbar-track {
+  background-color: #F5F5F5;
+}
+
+.detailMapPopupScrollBox table {
+  min-width: 100%;
+}
+
+.detailMapPopupScrollBox tr {
+  width: 100%;
+  height: 3rem;
+}
+
+.detailMapPopupHeader tr {
+  width: 100%;
+  height: 3rem;
+  text-align: center;
+  font-size: 1.4rem;
+}
+
+.detailMapPopupScrollBox td {
+  text-align: center;
+  font-size: 1.4rem;
+  border-left: 0.1rem solid #D4D4D4;
+  border-bottom: 0.1rem solid #D4D4D4;
+  white-space: nowrap;
+  padding: 0 2rem;
+}
+
+.popupArticleSearch {
+  justify-content: flex-start;
+}
+
+.stationSearchInput {
+  margin-right: 2rem;
+}
+
+.stationSearchBtn {
+  background-color: #444;
+  margin-left: 3rem;
+}
+
+.stationSearchInputText {
+  margin-right: 1rem;
+}
+
+.popupSectionFirst {
+  padding-bottom: 0rem;
+}
+
+
+.detailMapPopupScrollBoxTr:hover {
+  cursor: pointer;
+  background-color: #EFEFEF;
+}
+
+.stationNumberInputText {
+  margin-left: 2rem;
+}
+
+.waypointNumberInput {
+  width: 8rem;
+}
+
+.routeStationTime {
+  font-size: 1.2rem;
 }
