--- a/templates/base.html
+++ b/templates/base.html
@@ -192,6 +192,9 @@
                 <a href="{% url 'salary:status' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">근무현황</li>
                 </a>
+                <a href="{% url 'salary:table' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">급여테이블</li>
+                </a>
                 <a href="{% url 'HR:salary' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">급여관리(현재)</li>
                 </a>
