feat: 임금테이블 - 법정휴일 수당 추가, Salary없을 경우 새로 생성, 대체 공휴일 카운트 빼기

--- a/salary/templates/salary/table.html
+++ b/salary/templates/salary/table.html
@@ -187,8 +187,8 @@
                         <div class="addCommaToInnerText">{{data.ordinary_salary}}</div>
                     </div>
                     <div class="tbodyLegalAllowance" style="display: flex;">
-                        <div class="addCommaToInnerText">{{data.weekly_holiday_allowance}}</div>
-                        <div class="addCommaToInnerText">법정휴일</div>
+                        <div class="addCommaToInnerText"></div>
+                        <div class="addCommaToInnerText">{{data.legal_holiday_allowance}}</div>
                         <div class="addCommaToInnerText"></div>
                         <div class="addCommaToInnerText">{{data.additional_wage}}</div>
                         <div class="addCommaToInnerText">{{data.night_shift_wage}}</div>
@@ -245,7 +245,7 @@
                 </div>
                 <div class="sumLegalAllowance" style="display: flex;">
                     <div class="weekly_holiday_allowance">주휴수당</div>
-                    <div class="">법정휴일</div>
+                    <div class="legal_holiday_allowance">법정휴일</div>
                     <div class=""></div>
                     <div class="additional_wage"></div>
                     <div class="night_shift_wage"></div>
