fix: 임금테이블 - 월연장가산임금, 야간근로 가산임금, 휴일근로 가산임금 기본시급이 아니라 통상시급으로 수정

--- a/templates/base.html
+++ b/templates/base.html
@@ -193,7 +193,7 @@
                   <li class="sideMenuNav2Menu">근무현황</li>
                 </a>
                 <a href="{% url 'salary:table' %}" class="sideMenuNav2Link">
-                  <li class="sideMenuNav2Menu">급여테이블</li>
+                  <li class="sideMenuNav2Menu">임금테이블</li>
                 </a>
                 <a href="{% url 'HR:salary' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">급여관리(현재)</li>
