feat: 운행확인2, 임금테이블2 생성
근무시간을 노선에 있는 time을 사용하여 공차를 고정적으로 포함하여 계산하여 운행확인2, 임금테이블2에 적용

--- a/dispatch/templates/dispatch/schedule2.html
+++ b/dispatch/templates/dispatch/schedule2.html
@@ -8,7 +8,7 @@
 
 {% block content-header %}
 <div class="HeaderTitle">
-    운행확인
+    운행확인2
 </div>
 {% endblock %}
 
@@ -189,5 +189,5 @@
     {% endautoescape %}
     console.log("DATA", data)
 </script>
-<script src="{% static 'js/dispatch/schedule/schedulePopup.js' %}"></script>
+<script src="{% static 'js/dispatch/schedule/schedulePopup2.js' %}"></script>
 {% endblock %}
