--- a/templates/base.html
+++ b/templates/base.html
@@ -196,6 +196,9 @@
                 <a href="{% url 'salary:table' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">임금테이블</li>
                 </a>
+                <a href="{% url 'salary:table2' %}" class="sideMenuNav2Link">
+                  <li class="sideMenuNav2Menu">임금테이블2</li>
+                </a>
                 <a href="{% url 'HR:salary' %}" class="sideMenuNav2Link">
                   <li class="sideMenuNav2Menu">급여관리(현재)</li>
                 </a>
